# qt-module-manager

./: README.md  pyproject.toml
qt_module_manager/: __init__.py
